# CSVinsight

./: .env  README.md  app.py  pyproject.toml
model/: llm.py
vectorstore/db_faiss/: index.faiss  index.pkl
